# nagios-control-center

./: .gitignore  .gitmodules  Cargo.toml  README.md  capacitor.config.json  docker-compose.yml.txt  package-lock.json  package.json  vite.config.js
android/app/: build.gradle  my-release-key.keystore
frontend/src/: App.jsx  DashboardApp.jsx  Layout.jsx  build.rs  index.html
frontend/src/auth/: Login.jsx
frontend/src/components/: Dashlet.tsx  DynamicDashlet.tsx  InstanceEditForm.tsx  InstanceLogin.tsx  NagiosXIStatus.tsx  ServerConfig.jsx
frontend/src/context/: AuthContext.tsx  InstanceContext.tsx
frontend/src/controls/: DashboardControls.tsx  config.js
frontend/src/pages/: settings.tsx
frontend/src/services/: api.js  (+1 more)
src/: App.css  DashboardApp.jsx  Layout.jsx  auth.rs  index.css  main.jsx  main.rs
src/api/: instances.ts  nagiosClient.ts
src/auth/: Login.jsx  SetupAdmin.jsx
src/components/: CustomDashlet.tsx  CustomDashletManager.tsx  Dashboard.tsx  Dashlet.tsx  DynamicDashlet.tsx  GridLayout.jsx  InstanceDashboard.tsx  InstanceEditForm.tsx  InstanceLogin.tsx  InstanceManager.tsx  NNAStatus.tsx  NagiosXIStatus.tsx  WeatherDashlet.tsx
src/context/: AuthContext.tsx  InstanceContext.tsx  ThemeContext.tsx
src/controls/: DashboardControls.tsx
src/pages/: HostHealth.tsx  LS.tsx  NNA.tsx  ServiceHealth.tsx  creator.tsx  home.tsx  instance.tsx  settings.tsx  trends.tsx
src/routes/: HostHealthRoute.tsx  ServiceHealthRoute.tsx
src/rs-backend/: auth.rs
src/services/: nagiosNNAService.ts  nagiosXiService.ts
src/utils/: DashletRegistry.ts  db.js
(+5 files in other folders)
