[package]
name = "nagios-control-center"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
include_dir = "0.7.4"
mime_guess = "2.0.5"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
uuid = {version = "1.18.1", features = ["v4", "serde"]}
